--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,3 @@
+<div class="jumbotron">
 <h1>Welcome to My App!</h1>
-<p>Sign Up <%= link_to "here", "#" %>.</p>
+<p>Click here to <%= link_to "Sign Up", "#", class: "btn btn-primary btn-lg" %></p>
