--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,10 +7,17 @@
   <%= csrf_meta_tags %>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
+
 <body>
 	<%= render 'layouts/header' %>
 	<div class="container">
+		<% flash.each do |name, msg| %>
+		<%= content_tag(:div, msg, class: "alert alert-info") %>
+
+		<% end %>
 	<%= yield %>
 	</div>
+	
+
 </body>
 </html>
